syntax="proto3";
package services;
import "models.proto";

message UserScoreRequest {
    repeated UserInfo users=1;
}

message UserScoreResponse {
    repeated UserInfo users=1;
}

service UserService {
    //传统方法
    rpc GetUserScore(UserScoreRequest) returns (UserScoreResponse){}
    //服务端流模式返回
    rpc GetUserScoreStream(UserScoreRequest) returns (stream UserScoreResponse){}
    //接收客户端流模式请求
    rpc GetUserScoreByClientStream(stream UserScoreRequest) returns (UserScoreResponse){}
    //双向流
    rpc GetUserScoreByTWS(stream UserScoreRequest) returns (stream UserScoreResponse){}
}

