syntax="proto3";
package services;

import "google/protobuf/timestamp.proto";

message ProdModel {
    int32 id=1;
    string name=2;
    float price=3;
}

message OrderMain {
    int32 id=1;
    string number=2;
    int32 userId=3;
    float money=4;
    google.protobuf.Timestamp time=5;
}

message UserInfo {
    int32 id=1;
    int32 score=2;
}